--- a/src/app/view-blog/view-blog.component.scss
+++ b/src/app/view-blog/view-blog.component.scss
@@ -1,3 +1,11 @@
+// pre {
+//   background-color: #23241f;
+//   color: #f8f8f2;
+// }
+.ql-syntax {
+  background-color: #23241f;
+  color: #f8f8f2;
+}
 .article-clean {
     color:#56585b;
     background-color:#fff;
